{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 493,
  "lineage": "3d4e8a7f-275b-2e46-9aa6-38e28e3d8062",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "main_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:network-acl/acl-04bed08b697ebc0eb",
            "default_network_acl_id": "acl-04bed08b697ebc0eb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04bed08b697ebc0eb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "202533531503",
            "subnet_ids": [
              "subnet-0dfe88f820e46aa4b",
              "subnet-0fa6ff5a7ad4a27b9"
            ],
            "tags": {
              "Name": "lately-relaxed-tapir-nacl"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-nacl"
            },
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:route-table/rtb-01b5799c5e3e69f02",
            "default_route_table_id": "rtb-01b5799c5e3e69f02",
            "id": "rtb-01b5799c5e3e69f02",
            "owner_id": "202533531503",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0408b0fb53acb5935",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lately-relaxed-tapir-main-rt"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-main-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1453c21dc7c5b78",
            "arn": "arn:aws:ec2:us-east-2:202533531503:elastic-ip/eipalloc-0d1453c21dc7c5b78",
            "domain": "vpc",
            "id": "eipalloc-0d1453c21dc7c5b78",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-189-59.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.189.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lately-relaxed-tapir-NAT-eip-IGW"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-NAT-eip-IGW"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09de2c5ae0dd6161d",
            "arn": "arn:aws:ec2:us-east-2:202533531503:elastic-ip/eipalloc-09de2c5ae0dd6161d",
            "domain": "vpc",
            "id": "eipalloc-09de2c5ae0dd6161d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-101-149.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.101.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lately-relaxed-tapir"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_linux_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0efc43a4067fe9a3e",
            "arn": "arn:aws:ec2:us-east-2:202533531503:instance/i-0a843a0f553027c9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a843a0f553027c9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "lately-relaxed-tapir-ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef168c32b00b819a",
            "private_dns": "ip-10-0-14-41.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-003476cdfa21b504e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfe88f820e46aa4b",
            "tags": {
              "Name": "lately-relaxed-tapir-linux_server"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-linux_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0944f0efb59967249"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.linux_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_windows_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f239dc2703bfeb6",
            "arn": "arn:aws:ec2:us-east-2:202533531503:instance/i-0d1e2e6e6c0a437eb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0d1e2e6e6c0a437eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "lately-relaxed-tapir-ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "wPWoyowziPJzAUopqTiUEdVQYpSOsQa4WKbtv2lh60QhyZEqZ8+kA+7hZZy7GfKkoRnfPZ6Eer6/spkiGCEjB0oEZ5g03+fF1FFfEEoke5StMCnoh7LXf8rhvwYgZvUZE9vE7dC8RJcRt6bSYYefwHKbH7dbtoGP7xK8vIMecv6L5zVq+sAkRvOK8Ts6A2qksbAZSe9PiK/RLERgzUFpi+yjmhNfpsSfRbSh1ceWm3ubeyMbIi+AtXXKqMEREMTCucFAyYscayx9YYLXJ6pH5fXZD/xxBEzaEbBPlcT4V8qXQfXEt98JrnGn21v30k9Vg9Px4I03PJfXIUbHDOe5V4mm9grHB8xE1suYoUJo9DXI820czEhRwmzDur201r0PsaAUCejfC61Yq3xPoo2I3W/IVL8IJjrMi8vwY7Q0VsPCuq1E66XWCh/lo6YKncSTQdcnFt9t79ojJXpjrRtHou [...]
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0337deda674314984",
            "private_dns": "ip-10-0-4-104.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0224dafc8992424e8",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa6ff5a7ad4a27b9",
            "tags": {
              "Name": "lately-relaxed-tapir-windows_server"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-windows_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dc5ae8e359b6fda"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.windows_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc01",
            "data.aws_ami.windows",
            "random_pet.pet_name",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:internet-gateway/igw-0a6c8b14c275ec7cf",
            "id": "igw-0a6c8b14c275ec7cf",
            "owner_id": "202533531503",
            "tags": {
              "Name": "lately-relaxed-tapir-IGW"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-IGW"
            },
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1453c21dc7c5b78",
            "association_id": "eipassoc-085cba1b3d9fc5540",
            "connectivity_type": "public",
            "id": "nat-0408b0fb53acb5935",
            "network_interface_id": "eni-027d88682fab67f1b",
            "private_ip": "10.0.9.137",
            "public_ip": "3.143.189.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dfe88f820e46aa4b",
            "tags": {
              "Name": "lately-relaxed-tapir-NAT-IGW"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-NAT-IGW"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_gw",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:route-table/rtb-09f6118a16cba1e6a",
            "id": "rtb-09f6118a16cba1e6a",
            "owner_id": "202533531503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6c8b14c275ec7cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lately-relaxed-tapir-default-public_rt"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-default-public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0586ab26926cfc514",
            "route_table_id": "rtb-09f6118a16cba1e6a",
            "subnet_id": "subnet-0fa6ff5a7ad4a27b9"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:security-group/sg-0944f0efb59967249",
            "description": "Allow inbound traffic for SSH, MYSql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0944f0efb59967249",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Linux SG",
            "name_prefix": "",
            "owner_id": "202533531503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lately-relaxed-tapir-linux_sg"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-linux_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:security-group/sg-00dc5ae8e359b6fda",
            "description": "Allow inbpund traffic for HTTP, HTTPS, RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dc5ae8e359b6fda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "windows SG",
            "name_prefix": "",
            "owner_id": "202533531503",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "lately-relaxed-tapir-windows_sg"
            },
            "tags_all": {
              "name": "lately-relaxed-tapir-windows_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:subnet/subnet-0dfe88f820e46aa4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfe88f820e46aa4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533531503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lately-relaxed-tapir-private"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-private"
            },
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:subnet/subnet-0fa6ff5a7ad4a27b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa6ff5a7ad4a27b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533531503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lately-relaxed-tapir-public"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-public"
            },
            "vpc_id": "vpc-03c96bc2cb41bf7f3"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202533531503:vpc/vpc-03c96bc2cb41bf7f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-04bed08b697ebc0eb",
            "default_route_table_id": "rtb-01b5799c5e3e69f02",
            "default_security_group_id": "sg-0288dcf11bd7beeee",
            "dhcp_options_id": "dopt-01db0b2bc35101882",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c96bc2cb41bf7f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b5799c5e3e69f02",
            "owner_id": "202533531503",
            "tags": {
              "Name": "lately-relaxed-tapir-my-vpc"
            },
            "tags_all": {
              "Name": "lately-relaxed-tapir-my-vpc"
            }
          },
          "dependencies": [
            "random_pet.pet_name"
          ]
        }
      ]
    }
  ]
}